# dama

./: CMakeLists.txt  README.md
include/checkers/: board.h  eval.h  movegen.h  zobrist.h
include/game/: checkers_adapter.h
src/checkers/: board.c  eval.c  movegen.c  zobrist.c
src/game/: checkers_adapter.c
tools/: dama_client_cocoa.m  search_cli.c  selfplay_cli.c
